--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,4 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  margin: 0;
-  padding: 0;
 }
