--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
+  height: 40%;
 }
 .--show_answer {
   border-style: solid;
